--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "intl": "^1.2.5",
     "ionic-angular": "3.9.2",
+    "ionic2-calendar": "^0.4.3",
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
